--- a/flex/05-flex-modal/index.html
+++ b/flex/05-flex-modal/index.html
@@ -8,13 +8,30 @@
     <title>Modal</title>
   </head>
   <body>
-    <div class="modal">
+
+<div class="modal">
+
+    <div class="container-icon">
       <div class="icon">!</div>
-      <div class="header">Are you sure you want to do that?</div>
+    </div>
+
+    <div class="main-container">
+
+
+      <div class="main-container-vert-top">
+      <div class="header"><strong>Are you sure you want to do that?</strong></div>
       <button class="close-button">✖</button>
+      </div>
+
       <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
+    
+      <div class="main-container-vert-bot">
       <button class="continue">Continue</button>
       <button class="cancel">Cancel</button>
+      </div>
     </div>
+    </div>
+</div>
+
   </body>
 </html>
